# RK3588-System-Monitor

./: README.md  c_cpp_properties.json
RK3588-System-Monitor/: RK3588-System-Monitor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
RK3588-System-Monitor/ui_src/: CpuUsageLabel.cpp  CpuUsageLabel.h  MemoryLabel.cpp  MemoryLabel.h  ThermalLabel.cpp  ThermalLabel.h
src/: CPUUsage.cpp  CPUUsage.h  Memory.cpp  Memory.h  RK3588Thermal.cpp  RK3588Thermal.h
test/cpu/: CMakeLists.txt  main.cpp
test/memory/: CMakeLists.txt  main.cpp
test/thermal/: CMakeLists.txt  main.cpp
